// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell deve renderizar corretamente 1`] = `
<div
  class="css-18dl9eo"
>
  Content
</div>
`;

exports[`Cell deve renderizar corretamente 2`] = `
<div
  class="css-1rhfvo5"
>
  Content
</div>
`;

exports[`Cell deve renderizar corretamente 3`] = `
<div
  class="css-f72zs4"
>
  Content
</div>
`;
